--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
                             modi cumque eos accusamus
                         </p>
                     </div>
-                    <button>see</button>
+                    <button class="btn">see</button>
                 </li>
             </ul>
         </section>
