--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -9,10 +9,10 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Raleway&amp;display=swap" rel="stylesheet">
     
-<link rel="stylesheet" href="./styles/responsive.css">
-<link rel="stylesheet" href="./styles/base.css">
-<link rel="stylesheet" href="./styles/fonts.css">
-<link rel="stylesheet" href="./styles/header.css">
+<link rel="stylesheet" href="../styles/responsive.css">
+<link rel="stylesheet" href="../styles/base.css">
+<link rel="stylesheet" href="../styles/fonts.css">
+<link rel="stylesheet" href="../styles/header.css">
 
 <script src="./scripts/header.js" defer></script>
 
