--- a/views/includes/header-nav-items.ejs
+++ b/views/includes/header-nav-items.ejs
@@ -8,7 +8,6 @@
 <span class="dropdown">
     مینی برنامه <i class="fa fa-angle-up"></i>
     <ul class="dropdownmenu">
-        <li><a href="/board" target="_blank">تخته نقاشی</a></li>
-        <li><a href="/tic-tac-toe" target="_blank">بازی دوز</a></li>
+        <li><a href="/mini-app/tic-tac-toe" target="_blank">بازی دوز</a></li>
     </ul>
 </span>
